# translategemma-app-localization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
demo_app/DemoApp/Resources/Localizations/de.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/en.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/es.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/fr.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/it.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/ja.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/ko.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/pt-BR.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/ru.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/zh-Hans.lproj/: Localizable.strings
demo_app/DemoApp/Resources/Localizations/zh-Hant.lproj/: Localizable.strings
docs/: GITHUB_ACTIONS.md  PROJECT_PLAN.md
src/translator/: __init__.py  __main__.py  cli.py  config.py
src/translator/core/: __init__.py  service.py
src/translator/diff/: __init__.py  detector.py
src/translator/strings/: __init__.py  models.py  parser.py
src/translator/translation/: __init__.py  batch.py  engine.py
tests/: __init__.py  test_detector.py  test_integration.py  test_parser.py
tests/fixtures/: sample.strings
